syntax="proto3";

package calculator;
option go_package="calculator/calculatorpb";

message SumRequest {
  int64 first_number = 1;
  int64 second_number = 2;
}

message SumResponse {
  int64 sum_response_count = 1;
}

message PrimeNumberDecompositionRequest {
  int64 number = 1;
}

message PrimeNumberDecompositionResponse {
  int64 prime_factor = 1;
}

message AverageNumberRequest {
  int64 number = 1;
}

message AverageNumberResponse {
  int64 number = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double number_root = 1;
}

service Sum {
  rpc NumbersSum(SumRequest) returns (SumResponse) {};

  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

  rpc AverageNumbers(stream AverageNumberRequest) returns (AverageNumberResponse) {};

  // error handling
  // this rpc will throw an exception if the sent number is negative
  // the error being sent is of tipy INVALID_ARGUMENTS
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {}; 
}
